--- a/drupal/sites/all/themes/quake/color.page.css
+++ b/drupal/sites/all/themes/quake/color.page.css
@@ -1,17 +1,17 @@
-/* pink */
+/* orange */
 
 #logoBox {
-	background-image: url(images/pink-logo.gif);
+	background-image: url(images/orange-logo.gif);
 }
 
 h4 {
-	color: #BF507A;
+	color: #e7a157;
 }
 
 #bannerQuote { 
-	background-color: #BF507A;
+	background-color: #e7a157;
 }
 
 #leftCol ul li {
-	background-image: url(images/pink-dash.gif);
+	background-image: url(images/orange-dash.gif);
 }
