--- a/drupal/sites/all/themes/quake/style.css
+++ b/drupal/sites/all/themes/quake/style.css
@@ -68,8 +68,8 @@ body
 
 #header h1 {
 	float: left;
-	margin-top: 60px;
-	font-size: 3.2em;
+	margin-top: 30px;
+	font-size: 4.4em; /*3.2em;*/
 	font-weight: normal;
 }
 
