--- a/drupal/sites/all/themes/quake/style.css
+++ b/drupal/sites/all/themes/quake/style.css
@@ -141,10 +141,10 @@ body
 }
 	
 #main {
-	width: 622px;
+	width: 610px;
 	float: left;
 	padding-left: 18px;
-  margin-right: 1em;
+  margin-right: 12px;
 	border-left: 1px solid #6e9ece;
 }
 
