--- a/drupal/sites/all/themes/quake/style.css
+++ b/drupal/sites/all/themes/quake/style.css
@@ -144,7 +144,7 @@ body
 	width: 610px;
 	float: left;
 	padding-left: 18px;
-  margin-right: 12px;
+  padding-right: 12px;
 	border-left: 1px solid #6e9ece;
 }
 
