media images float right in page content

--- a/drupal/sites/all/themes/quake/style.css
+++ b/drupal/sites/all/themes/quake/style.css
@@ -236,10 +236,10 @@ ul.inline li a {
 	margin: 0 0 20px 0;
 }
 
-
-
-
-
-
-
-
+/*
+ * media image:
+ * we want images to float right in page
+ */
+.media-image {
+  float: right;
+}
